--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^6.0.0-0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^9.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
